# advanced-rag

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt  run_backend.sh  run_frontend.sh  run_inngest.sh  run_servers.sh
data/qdrant_db/: meta.json
docs/: api_guide.md  architecture.md  architecture_comparison.md  configuration.md  full_documentation.md  multimodal_rag.md  performance_analysis.md  req.md
frontend/: package-lock.json  package.json  tsconfig.node.tsbuildinfo  vite.config.js.timestamp-1782293710096-cbdc0249292b5.mjs  vite.config.ts
frontend/src/: App.jsx  App.tsx  index.css  types.ts
frontend/src/api/: queries.ts
frontend/src/components/: ChatPanel.tsx  ChunksPanel.tsx  ConfigPanel.tsx  Header.tsx  IngestPanel.tsx  Sidebar.tsx
frontend/src/store/: useStore.ts
presets/: custom_1.yaml  custom_2.yaml  enterprise_accuracy.yaml  local_multimodal.yaml  local_multimodal_pipeline.yaml  local_sandbox.yaml  multimodal_layout.yaml  strict_security.yaml
scratch/: check_beyond_detail.py  compare_images.py  debug_parse.py  inspect_api.py  inspect_qdrant.py  sandbox.py  test_api.py  test_parse.py  test_raw_partition.py
src/rag/: __init__.py
src/rag/api/: __init__.py  app.py
src/rag/config/: __init__.py  loader.py  schema.py
src/rag/core/: __init__.py  factory.py  interfaces.py  registry.py  types.py
src/rag/embeddings/: __init__.py  cohere_embeddings.py  local_embeddings.py  openai_embeddings.py
src/rag/evaluation/: __init__.py  ragas_evaluator.py  trulens_evaluator.py
src/rag/guardrails/: __init__.py  llama_guard.py  nemo_guardrails.py
src/rag/ingestion/: __init__.py  enricher.py
src/rag/llm/: __init__.py  anthropic_llm.py  cohere_llm.py  local_llm.py  openai_llm.py
src/rag/observability/: __init__.py  logging.py  metrics.py  tracing.py
src/rag/pipeline/: __init__.py  orchestrator.py
src/rag/retrieval/: __init__.py
test_data/: company_policy.md  generate_pdf.py  ingest_test_data.py  product_catalog.csv  release_notes.txt  server_troubleshooting.txt
tests/: __init__.py  conftest.py  test_api.py  test_chunkers.py  test_config.py  test_e2e_pipeline.py  test_embeddings.py  test_enricher.py  test_factory.py  test_guardrails_evaluators.py  test_hybrid_api.py  test_inngest_api.py  test_llm.py  test_orchestrator.py  test_parsers.py  test_parsers_revamp.py  test_registry.py  test_retrievers_rerankers.py  test_vectorstores.py
(+48 files in other folders)
