[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "advanced-rag"
version = "0.1.0"
description = "Production-grade, modular, configuration-driven RAG framework"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "pyyaml>=6.0",
    "structlog>=24.1",
    "tenacity>=8.3",
    "httpx>=0.27",
    "numpy>=1.26",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
# ── Observability ────────────────────────────────────────────────────
telemetry = [
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp>=1.25",
]
langsmith = ["langsmith>=0.1"]

# ── LLM / Embedding Providers ───────────────────────────────────────
openai = ["openai>=1.35"]
anthropic = ["anthropic>=0.30"]
cohere = ["cohere>=5.5"]
local = ["sentence-transformers>=3.0"]

# ── Vector Stores ────────────────────────────────────────────────────
pinecone = ["pinecone-client>=4.0"]
qdrant = ["qdrant-client>=1.9"]
milvus = ["pymilvus>=2.4"]
pgvector = ["asyncpg>=0.29", "pgvector>=0.3"]

# ── Ingestion ────────────────────────────────────────────────────────
unstructured = ["unstructured[all-docs]>=0.14"]
llamaparse = ["llama-parse>=0.4"]

# ── Guardrails ───────────────────────────────────────────────────────
guardrails-nemo = ["nemoguardrails>=0.9"]

# ── Evaluation ───────────────────────────────────────────────────────
ragas = ["ragas>=0.1"]
trulens = ["trulens>=0.32"]

# ── API Server ────────────────────────────────────────────────────────
api = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.0.0",
]

# ── Convenience bundles ──────────────────────────────────────────────
all = [
    "advanced-rag[telemetry,openai,anthropic,cohere,qdrant,unstructured,ragas]",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rag"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
